managed shared pomodoro

--- a/src/sass/_custom.scss
+++ b/src/sass/_custom.scss
@@ -16,3 +16,10 @@
 .selectedRow{
   background-color: $primary
 }
+
+.shared-icon{
+  line-height: 48px;
+  color: #aeb1b5;
+  margin-left: 20px;
+
+}
