--- a/src/index.ejs
+++ b/src/index.ejs
@@ -8,7 +8,7 @@
 <body>
   <div id="app" style="padding-bottom: 20px">
   </div>
-  <script src="/js/vendors.js"></script>
+  <script src="/js/vendor.js"></script>
   <script src="/js/app.js"></script>
 </body>
 </html>
