--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,3 +1,5 @@
+$fa-font-path: "~font-awesome/fonts";
+@import "~font-awesome/scss/font-awesome.scss";
 @import "../../node_modules/bulma/bulma";
 @import "_pomicons";
 @import "custom";
