--- a/src/sass/_custom.scss
+++ b/src/sass/_custom.scss
@@ -1,11 +1,14 @@
 
-.selectedRow{
+.selectedRow {
   background-color: $primary
 }
 
-.shared-icon{
+.shared-icon {
   line-height: 48px;
   color: #aeb1b5;
   margin-left: 20px;
+}
 
+.centered {
+  text-align: 'center'
 }
